wip: fix min-width 1025px layout issue, made some style changes to aside section, reduced padding on main__header, also made footer layout change for smaller screens

--- a/css/aside.css
+++ b/css/aside.css
@@ -41,6 +41,6 @@
   margin-bottom: 0.3rem;
 }
 
-div.side__post:last-child {
+.side__post:last-child {
   border-bottom: none;
 }
