--- a/css/grid.css
+++ b/css/grid.css
@@ -12,7 +12,7 @@
   background-color: #2c2c2c;
   border-radius: 0.5rem;
   color: #fff;
-  padding: 5px;
+  padding: 10px;
   font-size: 4em;
   letter-spacing: 0.1em;
   display: flex;
@@ -22,7 +22,7 @@
 }
 
 .featured__blog {
-  grid-column: 1 / span 2;
+  grid-column: 1 / span 3;
   grid-row: 2 / span 1;
   background-image: url("../assets/triangle-unsplash.jpg");
   background-size: cover;
@@ -31,7 +31,7 @@
   border-radius: 0.5rem;
   color: #fff;
   padding: 20px;
-  height: 240px;
+  height: 264px;
 }
 
 .aside__blog {
