--- a/css/nest.css
+++ b/css/nest.css
@@ -34,7 +34,7 @@
   background-color: #800000;
   outline: none;
   border-radius: 8px;
-  margin-top: 40px;
+  margin-top: 18px;
   padding: 15px 25px;
   cursor: pointer;
 }
