--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("media.css");
+/* @import url("media.css"); */
 @import url("reset.css");
 @import url("nest.css");
 @import url("grid.css");
@@ -36,8 +36,8 @@
     grid-column: 1 / span 1;
     grid-row: 1 / span 1;
     font-size: 1.3rem;
-    padding-left: 10px;
-    margin-bottom: 20px;
+    /* padding-left: 10px; */
+    margin-bottom: 8px;
   }
 
   .grid__header .description {
@@ -51,6 +51,22 @@
     height: 40px;
     font-size: 10px;
     text-align: center;
+  }
+
+  .side__post:last-child {
+    border-bottom: none;
+  }
+
+  .main__footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer__text {
+    font-size: 1rem;
+    margin-right: 20px;
   }
 }
 
@@ -79,7 +95,7 @@
     grid-column: 1 / span 2;
     grid-row: 1 / span 1;
     font-size: 2.375rem;
-    padding-left: 15px;
+    /* padding-left: 15px; */
   }
 
   .grid__header .description {
@@ -124,6 +140,15 @@
     grid-column: 1 / span 3;
     grid-row: 6 / span 1;
   }
+
+  .side__post:last-child {
+    border-bottom: none;
+  }
+
+  .footer__text {
+    font-size: 1rem;
+    margin-right: 20px;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -159,8 +184,8 @@
       flex-direction: row;
       justify-content: space-evenly;
       align-items: center;
+      padding-left: 11px;
     }
-    padding-left: 11px;
   }
 
   .grid__header .description {
@@ -172,7 +197,7 @@
   .featured__blog {
     grid-column: 1 / span 2;
     grid-row: 1 / span 4;
-    height: 297px;
+    /* height: 290px; */
   }
 
   .aside__blog {
@@ -221,6 +246,10 @@
   .blog__post-two,
   .blog__post-three img {
     width: 100%;
+  }
+
+  .side__post:last-child {
+    border-bottom: none;
   }
 }
 
@@ -271,5 +300,9 @@
   .header__navbar {
     font-size: 1.75rem;
     margin-left: 40px;
+  }
+
+  .side__post:last-child {
+    border-bottom: none;
   }
 }
